// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Color/ColorDot color dots 1`] = `
Array [
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={
        Object {
          "background": "white",
        }
      }
    />
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={
        Object {
          "background": "#000",
        }
      }
    />
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={
        Object {
          "background": "#abcd",
        }
      }
    />
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={
        Object {
          "background": "#aabbcc",
        }
      }
    />
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={
        Object {
          "background": "#aabbccdd",
        }
      }
    />
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={
        Object {
          "background": "rgb(100, 150, 250)",
        }
      }
    />
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={
        Object {
          "background": "rgba(100, 150, 250, .5)",
        }
      }
    />
  </div>,
]
`;

exports[`Storyshots components/Color/ColorDot color dots with children 1`] = `
Array [
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={
        Object {
          "background": "#FFF",
        }
      }
    >
      <svg
        className="euiIcon euiIcon--medium euiIcon-isLoading"
        focusable="false"
        height={16}
        style={
          Object {
            "fill": "#000",
          }
        }
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={
        Object {
          "background": "#666",
        }
      }
    >
      <svg
        className="euiIcon euiIcon--medium euiIcon-isLoading"
        focusable="false"
        height={16}
        style={
          Object {
            "fill": "#fff",
          }
        }
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={
        Object {
          "background": "rgba(100, 150, 250, .5)",
        }
      }
    >
      <svg
        className="euiIcon euiIcon--medium euiIcon-isLoading"
        focusable="false"
        height={16}
        style={
          Object {
            "fill": "#fff",
          }
        }
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={
        Object {
          "background": "#000",
        }
      }
    >
      <svg
        className="euiIcon euiIcon--medium euiIcon-isLoading"
        focusable="false"
        height={16}
        style={
          Object {
            "fill": "#fff",
          }
        }
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>,
]
`;

exports[`Storyshots components/Color/ColorDot invalid dots 1`] = `
Array [
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={Object {}}
    />
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={Object {}}
    />
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={Object {}}
    />
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={Object {}}
    />
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={Object {}}
    />
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={Object {}}
    />
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={Object {}}
    />
  </div>,
]
`;
